--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,11 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">Crew Roster</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="/members">Crew Roster</a></li>
+    
   </ul>
 
-  <div ng-view ng-controller="MyCtrl1"></div>
+  <div ng-view></div>
 
   <div>Angular seed app: v<span app-version></span></div>
 
@@ -47,7 +47,6 @@
     <script src="assets/js/bootstrap-typeahead.js"></script>
     
   <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-resources.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
